Fix some readability issues on doc pages in dark theme

--- a/contrib/themes/dark/scss/colours.scss
+++ b/contrib/themes/dark/scss/colours.scss
@@ -3,14 +3,14 @@ $faint_green: #EDFAED;
 $leaf:   #699040;
 $red:    #d64e4e; // a bit dark
 $rose:   #f5d3d3; // ugly
-$sand:   #efead7;
-$water:  #d9e1e8;
+$water:  #5f7b88;
 
 $night_sky: #001b38;
 $green_darken_4: #1B5E20;
 $grey_lighten_1: #BDBDBD;
 $grey_lighten_2: #E0E0E0;
 $grey_lighten_3: #EEEEEE;
+$white: #FFFFFF;
 $grey: #9E9E9E;
 $grey_darken_1: #757575;
 $blue_grey: #607D8B;
