--- a/contrib/themes/dark/scss/pools.scss
+++ b/contrib/themes/dark/scss/pools.scss
@@ -6,7 +6,7 @@
     @include shadow;
 
     box-sizing: border-box;
-    border: 1px solid $sand;
+    border: 1px solid $water;
     background: $background_colour_3;
     width: 60%;
     padding: 1em;
